--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-node_modules/
+api/node_modules
+client/node_modules
+
+api/.env
+client/build
+
+
+# misc
+client/.DS_Store
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
