--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
